--- a/Seminar1/index.html
+++ b/Seminar1/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <ul>
-        <li><a href=index.html>Главная</a></li>
-        <li><a href=catalog/catalog.html>Каталог</a></li>
-        <li><a href="#contact">Контакты</a></li>
+        <li><a class="menu" href=index.html>Главная</a></li>
+        <li><a class="menu" href=catalog/catalog.html>Каталог</a></li>
+        <li><a class="menu" href="#contact">Контакты</a></li>
     </ul>
     <h1>Главная страница</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis beatae, porro ratione est vero assumenda! Rerum illo praesentium veniam blanditiis, officiis aut dolor ab? Impedit illum accusantium excepturi deleniti doloribus?</p>
