--- a/Seminar3/index.html
+++ b/Seminar3/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header class="header">
+    <header class="header center">
         <img class="header_logo" src="img/logo.png" alt="Логотип">
         <div class="header_brand">
             <p>Grow</p>
@@ -24,10 +26,11 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="center">
             <div class="main_text_container">
                 <h1 class="main_info">SEO & Digital Marketing For Your Website.</h1>
-                <p class="additional_info">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
+                <p class="additional_info">Provide all kind of seo services and help to improve seo ranking. Globally
+                    incubate standards.</p>
                 <div class="buttons">
                     <button class="main_button"><a class="main_button" href="#start">Start Now</a></button>
                     <a href="#video" class="link">Watch Video</a>
@@ -36,13 +39,14 @@
             <img src="img/pngfind.png" alt="Основная иллюстрация">
         </section>
     </main>
-    <footer>
+    <footer class="center">
         <img src="img/footer1.png" alt="liva">
         <img src="img/footer2.png" alt="kanba">
         <img src="img/footer3.png" alt="amara">
         <img src="img/footer4.png" alt="aven">
         <img src="img/footer5.png" alt="hexlab">
     </footer>
-    
+
 </body>
+
 </html>
