--- a/Seminar3/index.html
+++ b/Seminar3/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <header class="header center">
-        <img class="header_logo" src="img/logo.png" alt="Логотип">
+    <header class="center">
         <div class="header_brand">
+            <img class="header_logo" src="img/logo.png" alt="Логотип">
             <p>Grow</p>
             <p class="header_brand_add_color">Be</p>
         </div>
@@ -25,19 +25,17 @@
             <a class="header_menu_elem" href="#Contact">Contact</a>
         </div>
     </header>
-    <main>
-        <section class="center">
-            <div class="main_text_container">
-                <h1 class="main_info">SEO & Digital Marketing For Your Website.</h1>
-                <p class="additional_info">Provide all kind of seo services and help to improve seo ranking. Globally
-                    incubate standards.</p>
-                <div class="buttons">
-                    <button class="main_button"><a class="main_button" href="#start">Start Now</a></button>
-                    <a href="#video" class="link">Watch Video</a>
-                </div>
+    <main class="center">
+        <div class="main_text_container">
+            <h1 class="main_info">SEO & Digital Marketing For Your Website.</h1>
+            <p class="additional_info">Provide all kind of seo services and help to improve seo ranking. Globally
+                incubate standards.</p>
+            <div class="buttons">
+                <button class="main_button"><a class="main_button" href="#start">Start Now</a></button>
+                <a href="#video" class="link">Watch Video</a>
             </div>
-            <img src="img/pngfind.png" alt="Основная иллюстрация">
-        </section>
+        </div>
+        <img src="img/pngfind.png" alt="Основная иллюстрация">
     </main>
     <footer class="center">
         <img src="img/footer1.png" alt="liva">
