--- a/Seminar5/index.html
+++ b/Seminar5/index.html
@@ -41,7 +41,7 @@
 
             <div class="big_blocks blocks">
                 <div class="big_block">
-                    <img class="img_im_block broken_img" src="image/main_block1.png">
+                    <img class="img_im_block" src="image/main_block1.png">
                     <h2>Keyword Research</h2>
                     <p class="text_in_block">Business applications through revolutionary catalysts for chang the
                         Seamlessly underwhelm dures.</p>
