--- a/Seminar6/indes.html
+++ b/Seminar6/indes.html
@@ -23,14 +23,43 @@
     </header>
     <main>
         <div class="main-post-background">
-            <div class="main-post center">
-                <img src="img/preview.png" alt="preview">
-                <img src="img/Rectangle.svg" alt="Rectangle">
-                <div>
-                    <h1 class="big-txt">THE BRAND</h1>
-                    <h1 class="additional-txt">OF LUXERIOUS <span class="pink-txt">FASHION</span> </h1>
+            <div class="main-post">
+                <div class="left-block">
+                    <img src="img/preview.png" alt="preview">
                 </div>
+                <div class="right-block">
+                    <img class="rectangle" src="img/Rectangle.svg" alt="Rectangle">
+                    <div>
+                        <h1 class="big-txt">THE BRAND</h1>
+                        <h1 class="additional-txt">OF LUXERIOUS <span class="pink-txt">FASHION</span> </h1>
+                    </div>
+                </div>
+
             </div>
+        </div>
+        <div class="blocks center">
+            <div class="block">
+                <img class="block_img" src="img/ad_woman.png" alt="">
+                <h1 class="block_txt">30% OFF
+                    FOR WOMEN</h1>
+            </div>
+            <div class="block">
+                <img class="block_img" src="img/ad_woman.png" alt="">
+                <h1 class="block_txt">30% OFF
+                    FOR WOMEN</h1>
+            </div>
+            <div class="block">
+                <img class="block_img" src="img/ad_woman.png" alt="">
+                <h1 class="block_txt">30% OFF
+                    FOR WOMEN</h1>
+            </div>
+            <div class="block block4">
+                <img class="block_img" src="img/ad_woman.png" alt="">
+                <h1 class="block_txt">30% OFF
+                    FOR WOMEN</h1>
+            </div>
+            </div>
+
         </div>
     </main>
 </body>
