--- a/Seminar6/indes.html
+++ b/Seminar6/indes.html
@@ -31,35 +31,129 @@
                     <img class="rectangle" src="img/Rectangle.svg" alt="Rectangle">
                     <div>
                         <h1 class="big-txt">THE BRAND</h1>
-                        <h1 class="additional-txt">OF LUXERIOUS <span class="pink-txt">FASHION</span> </h1>
+                        <h1 class="additional-txt">OF LUXERIOUS <span class="pink">FASHION</span> </h1>
                     </div>
+
                 </div>
 
             </div>
         </div>
         <div class="blocks center">
+            <div class="ad_block">
+                <img class="block_img" src="img/ad_woman.png" alt="">
+                <div class="block_txt">
+                    <h1 class="additional_txt_ad white">30% OFF</h1>
+                    <h1 class="main_txt_ad pink">FOR WOMEN</h1>
+                </div>
+            </div>
+            <div class="ad_block">
+                <img class="block_img" src="img/ad_man.png" alt="">
+                <div class="block_txt">
+                    <h1 class="additional_txt_ad white">HOT DEAL</h1>
+                    <h1 class="main_txt_ad pink">FOR MEN</h1>
+                </div>
+            </div>
+            <div class="ad_block">
+                <img class="block_img" src="img/ad_kid.png" alt="">
+                <div class="block_txt">
+                    <h1 class="additional_txt_ad white">NEW ARRIVALS</h1>
+                    <h1 class="main_txt_ad pink">FOR KIDS</h1>
+                </div>
+            </div>
+            <div class="ad_block block4">
+                <img class="block_img" src="img/ad_home.png" alt="">
+                <div class="block_txt">
+                    <h1 class="additional_txt_ad white">LUXIROUS & TRENDY</h1>
+                    <h1 class="main_txt_ad pink">ACCESORIES</h1>
+                </div>
+            </div>
+        </div>
+        <div class="section">
+            <h1 class="section-name">Fetured Items</h1>
+            <p class="section-description">Shop for items based on what we featured in this week</p>
+        </div>
+        <div class="blocks center">
             <div class="block">
-                <img class="block_img" src="img/ad_woman.png" alt="">
-                <h1 class="block_txt">30% OFF
-                    FOR WOMEN</h1>
+                <div class="product-img">
+                    <img src="img/market_pos1.jpg" alt="">
+                </div>
+                <div class="product-info">
+                    <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
+                    <p class="product-description">Known for her sculptural takes on traditional tailoring, Australian
+                        arbiter of cool Kym
+                        Ellery teams up with Moda Operandi.</p>
+                    <h1 class="price">$52.00</h1>
+                </div>
             </div>
             <div class="block">
-                <img class="block_img" src="img/ad_woman.png" alt="">
-                <h1 class="block_txt">30% OFF
-                    FOR WOMEN</h1>
+                <div class="product-img product-block2">
+                    <img src="img/market_pos2.png" alt="">
+                </div>
+                <div class="product-info">
+                    <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
+                    <p class="product-description">Known for her sculptural takes on traditional tailoring, Australian
+                        arbiter of cool Kym
+                        Ellery teams up with Moda Operandi.</p>
+                    <h1 class="price">$52.00</h1>
+                </div>
             </div>
             <div class="block">
-                <img class="block_img" src="img/ad_woman.png" alt="">
-                <h1 class="block_txt">30% OFF
-                    FOR WOMEN</h1>
+                <div class="product-img">
+                    <img src="img/market_pos3.png" alt="">
+                </div>
+                <div class="product-info">
+                    <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
+                    <p class="product-description">Known for her sculptural takes on traditional tailoring,
+                        Australian
+                        arbiter of cool Kym
+                        Ellery teams up with Moda Operandi.</p>
+                    <h1 class="price">$52.00</h1>
+                </div>
             </div>
-            <div class="block block4">
-                <img class="block_img" src="img/ad_woman.png" alt="">
-                <h1 class="block_txt">30% OFF
-                    FOR WOMEN</h1>
+            <div class="block">
+                <div class="product-img">
+                    <img src="img/market_pos4.png" alt="">
+                </div>
+                <div class="product-info">
+                    <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
+                    <p class="product-description">Known for her sculptural takes on traditional tailoring,
+                        Australian
+                        arbiter of cool Kym
+                        Ellery teams up with Moda Operandi.</p>
+                    <h1 class="price">$52.00</h1>
+                </div>
             </div>
+            <div class="block">
+                <div class="product-img">
+                    <img src="img/market_pos5.png" alt="">
+                </div>
+                <div class="product-info">
+                    <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
+                    <p class="product-description">Known for her sculptural takes on traditional tailoring,
+                        Australian
+                        arbiter of cool Kym
+                        Ellery teams up with Moda Operandi.</p>
+                    <h1 class="price">$52.00</h1>
+                </div>
             </div>
-
+            <div class="block">
+                <div class="product-img">
+                    <img src="img/market_pos6.png" alt="">
+                </div>
+                <div class="product-info">
+                    <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
+                    <p class="product-description">Known for her sculptural takes on traditional
+                        tailoring, Australian
+                        arbiter of cool Kym
+                        Ellery teams up with Moda Operandi.</p>
+                    <h1 class="price">$52.00</h1>
+                </div>
+            </div>
+        </div>
+        <div class="button">
+            <button>
+                <p class="pink">Browse All Product</p>
+            </button>
         </div>
     </main>
 </body>
