--- a/Seminar6/indes.html
+++ b/Seminar6/indes.html
@@ -38,7 +38,7 @@
 
             </div>
         </div>
-        <div class="blocks center">
+        <div class="ad_blocks center">
             <div class="ad_block">
                 <img class="block_img" src="img/ad_woman.png" alt="">
                 <div class="block_txt">
@@ -74,9 +74,7 @@
         </div>
         <div class="blocks center">
             <div class="block">
-                <div class="product-img">
-                    <img src="img/market_pos1.jpg" alt="">
-                </div>
+                <img class="product-img" src="img/market_pos1.jpg" alt="">
                 <div class="product-info">
                     <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
                     <p class="product-description">Known for her sculptural takes on traditional tailoring, Australian
@@ -86,9 +84,7 @@
                 </div>
             </div>
             <div class="block">
-                <div class="product-img product-block2">
-                    <img src="img/market_pos2.png" alt="">
-                </div>
+                <img class="product-img product-block2" src="img/market_pos2.png" alt="">
                 <div class="product-info">
                     <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
                     <p class="product-description">Known for her sculptural takes on traditional tailoring, Australian
@@ -98,9 +94,7 @@
                 </div>
             </div>
             <div class="block">
-                <div class="product-img">
-                    <img src="img/market_pos3.png" alt="">
-                </div>
+                <img class="product-img" src="img/market_pos3.png" alt="">
                 <div class="product-info">
                     <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
                     <p class="product-description">Known for her sculptural takes on traditional tailoring,
@@ -111,9 +105,7 @@
                 </div>
             </div>
             <div class="block">
-                <div class="product-img">
-                    <img src="img/market_pos4.png" alt="">
-                </div>
+                <img class="product-img" src="img/market_pos4.png" alt="">
                 <div class="product-info">
                     <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
                     <p class="product-description">Known for her sculptural takes on traditional tailoring,
@@ -124,9 +116,7 @@
                 </div>
             </div>
             <div class="block">
-                <div class="product-img">
-                    <img src="img/market_pos5.png" alt="">
-                </div>
+                <img class="product-img" src="img/market_pos5.png" alt="">
                 <div class="product-info">
                     <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
                     <p class="product-description">Known for her sculptural takes on traditional tailoring,
@@ -137,9 +127,7 @@
                 </div>
             </div>
             <div class="block">
-                <div class="product-img">
-                    <img src="img/market_pos6.png" alt="">
-                </div>
+                <img class="product-img" src="img/market_pos6.png" alt="">
                 <div class="product-info">
                     <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
                     <p class="product-description">Known for her sculptural takes on traditional
