--- a/Seminar6/indes.html
+++ b/Seminar6/indes.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="all_header">
         <div class="header center">
             <div class="start-header">
                 <img src="img/mini_logo.png" alt="logo">
@@ -22,7 +22,7 @@
 
     </header>
     <main>
-        <div class="main-post-background">
+        <div class="main-post-background center">
             <div class="main-post">
                 <div class="left-block">
                     <img src="img/preview.png" alt="preview">
@@ -84,7 +84,9 @@
                 </div>
             </div>
             <div class="block">
-                <img class="product-img product-block2" src="img/market_pos2.png" alt="">
+
+                    <img class="product-img product-block2" src="img/market_pos2.png" alt="">
+
                 <div class="product-info">
                     <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
                     <p class="product-description">Known for her sculptural takes on traditional tailoring, Australian
@@ -138,7 +140,7 @@
                 </div>
             </div>
         </div>
-        <div class="button">
+        <div class="button center">
             <button>
                 <p class="pink">Browse All Product</p>
             </button>
