--- a/Seminar6/indes.html
+++ b/Seminar6/indes.html
@@ -22,7 +22,7 @@
 
     </header>
     <main>
-        <div class="main-post-background center">
+        <div class="main-post-background">
             <div class="main-post">
                 <div class="left-block">
                     <img src="img/preview.png" alt="preview">
@@ -42,45 +42,45 @@
             <div class="ad_block">
                 <img class="block_img" src="img/ad_woman.png" alt="">
                 <div class="block_txt">
-                    <h1 class="additional_txt_ad white">30% OFF</h1>
-                    <h1 class="main_txt_ad pink">FOR WOMEN</h1>
+                    <h2 class="additional_txt_ad white">30% OFF</h2>
+                    <h2 class="main_txt_ad pink">FOR WOMEN</h2>
                 </div>
             </div>
             <div class="ad_block">
                 <img class="block_img" src="img/ad_man.png" alt="">
                 <div class="block_txt">
-                    <h1 class="additional_txt_ad white">HOT DEAL</h1>
-                    <h1 class="main_txt_ad pink">FOR MEN</h1>
+                    <h2 class="additional_txt_ad white">HOT DEAL</h2>
+                    <h2 class="main_txt_ad pink">FOR MEN</h2>
                 </div>
             </div>
             <div class="ad_block">
                 <img class="block_img" src="img/ad_kid.png" alt="">
                 <div class="block_txt">
-                    <h1 class="additional_txt_ad white">NEW ARRIVALS</h1>
-                    <h1 class="main_txt_ad pink">FOR KIDS</h1>
+                    <h2 class="additional_txt_ad white">NEW ARRIVALS</h2>
+                    <h2 class="main_txt_ad pink">FOR KIDS</h2>
                 </div>
             </div>
             <div class="ad_block block4">
                 <img class="block_img" src="img/ad_home.png" alt="">
                 <div class="block_txt">
-                    <h1 class="additional_txt_ad white">LUXIROUS & TRENDY</h1>
-                    <h1 class="main_txt_ad pink">ACCESORIES</h1>
+                    <h2 class="additional_txt_ad white">LUXIROUS & TRENDY</h2>
+                    <h2 class="main_txt_ad pink">ACCESORIES</h2>
                 </div>
             </div>
         </div>
         <div class="section">
-            <h1 class="section-name">Fetured Items</h1>
+            <h2 class="section-name">Fetured Items</h2>
             <p class="section-description">Shop for items based on what we featured in this week</p>
         </div>
         <div class="blocks center">
             <div class="block">
                 <img class="product-img" src="img/market_pos1.jpg" alt="">
                 <div class="product-info">
-                    <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
+                    <h2 class="product-name">ELLERY X M'O CAPSULE</h2>
                     <p class="product-description">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter of cool Kym
                         Ellery teams up with Moda Operandi.</p>
-                    <h1 class="price">$52.00</h1>
+                    <h2 class="price">$52.00</h2>
                 </div>
             </div>
             <div class="block">
@@ -88,55 +88,55 @@
                     <img class="product-img product-block2" src="img/market_pos2.png" alt="">
 
                 <div class="product-info">
-                    <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
+                    <h2 class="product-name">ELLERY X M'O CAPSULE</h2>
                     <p class="product-description">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter of cool Kym
                         Ellery teams up with Moda Operandi.</p>
-                    <h1 class="price">$52.00</h1>
+                    <h2 class="price">$52.00</h2>
                 </div>
             </div>
             <div class="block">
                 <img class="product-img" src="img/market_pos3.png" alt="">
                 <div class="product-info">
-                    <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
+                    <h2 class="product-name">ELLERY X M'O CAPSULE</h2>
                     <p class="product-description">Known for her sculptural takes on traditional tailoring,
                         Australian
                         arbiter of cool Kym
                         Ellery teams up with Moda Operandi.</p>
-                    <h1 class="price">$52.00</h1>
+                    <h2 class="price">$52.00</h2>
                 </div>
             </div>
             <div class="block">
                 <img class="product-img" src="img/market_pos4.png" alt="">
                 <div class="product-info">
-                    <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
+                    <h2 class="product-name">ELLERY X M'O CAPSULE</h2>
                     <p class="product-description">Known for her sculptural takes on traditional tailoring,
                         Australian
                         arbiter of cool Kym
                         Ellery teams up with Moda Operandi.</p>
-                    <h1 class="price">$52.00</h1>
+                    <h2 class="price">$52.00</h2>
                 </div>
             </div>
             <div class="block">
                 <img class="product-img" src="img/market_pos5.png" alt="">
                 <div class="product-info">
-                    <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
+                    <h2 class="product-name">ELLERY X M'O CAPSULE</h2>
                     <p class="product-description">Known for her sculptural takes on traditional tailoring,
                         Australian
                         arbiter of cool Kym
                         Ellery teams up with Moda Operandi.</p>
-                    <h1 class="price">$52.00</h1>
+                    <h2 class="price">$52.00</h2>
                 </div>
             </div>
             <div class="block">
                 <img class="product-img" src="img/market_pos6.png" alt="">
                 <div class="product-info">
-                    <h1 class="product-name">ELLERY X M'O CAPSULE</h1>
+                    <h2 class="product-name">ELLERY X M'O CAPSULE</h2>
                     <p class="product-description">Known for her sculptural takes on traditional
                         tailoring, Australian
                         arbiter of cool Kym
                         Ellery teams up with Moda Operandi.</p>
-                    <h1 class="price">$52.00</h1>
+                    <h2 class="price">$52.00</h2>
                 </div>
             </div>
         </div>
