--- a/Seminar6/indes.html
+++ b/Seminar6/indes.html
@@ -16,7 +16,9 @@
                 <img src="img/search.svg" alt="search">
             </div>
             <div class="menu">
-                <img src="img/Button copy.svg" alt="">
+                <img class="header-menu1" src="img/Forma1.svg" alt="">
+                <img class="header-menu2" src="img/Forma2.svg" alt="">
+                <img class="header-menu3" src="img/Forma3.svg" alt="">
             </div>
         </div>
 
@@ -61,7 +63,7 @@
                 </div>
             </div>
             <div class="ad_block block4">
-                <img class="block_img" src="img/ad_home.png" alt="">
+                <img class="block_img block4-img" src="img/ad_home.png" alt="">
                 <div class="block_txt">
                     <h2 class="additional_txt_ad white">LUXIROUS & TRENDY</h2>
                     <h2 class="main_txt_ad pink">ACCESORIES</h2>
