--- a/Seminar6/indes.html
+++ b/Seminar6/indes.html
@@ -30,8 +30,7 @@
                     <img src="img/preview.png" alt="preview">
                 </div>
                 <div class="right-block">
-                    <img class="rectangle" src="img/Rectangle.svg" alt="Rectangle">
-                    <div>
+                    <div class="brand">
                         <h1 class="big-txt">THE BRAND</h1>
                         <h1 class="additional-txt">OF LUXERIOUS <span class="pink">FASHION</span> </h1>
                     </div>
@@ -145,7 +144,53 @@
         <button>
             <p class="pink">Browse All Product</p>
         </button>
+        <div class="services-background">
+            <div class="services center">
+                <div class="service">
+                    <img src="img/service1.svg" alt="">
+                    <h2 class="service-name">Free Delivery</h2>
+                    <p class="service-description">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+                </div>
+                <div class="service">
+                    <img src="img/service2.svg" alt="">
+                    <h2 class="service-name">Sales & discounts</h2>
+                    <p class="service-description">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+                </div>
+                <div class="service">
+                    <img src="img/service3.svg" alt="">
+                    <h2 class="service-name">Quality assurance</h2>
+                    <p class="service-description">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+                </div>
+            </div>
+        </div>
+        <div class="subscribe">
+            <div class="citation-block">
+                <img src="img/face.png" alt="">
+                <div class="citation">
+                    <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer>
+        <div class="footer center">
+            <p class="footer-brand">© 2022  Brand  All Rights Reserved.</p>
+            <div class="media">
+                <div class="social-media">
+                    <img src="img/facebook-f-brands (3) 1.svg" alt="">
+                </div>
+                <div class="social-media">
+                    <img src="img/instagram-brands 1.svg" alt="">
+                </div>
+                <div class="social-media">
+                    <img src="img/pinterest-p-brands 1.svg" alt="">
+                </div>
+                <div class="social-media">
+                    <img src="img/twitter-brands 1.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
