add content and adaptive

--- a/Seminar6/indes.html
+++ b/Seminar6/indes.html
@@ -141,7 +141,7 @@
                 </div>
             </div>
         </div>
-        <button>
+        <button class="button-product">
             <p class="pink">Browse All Product</p>
         </button>
         <div class="services-background">
@@ -149,32 +149,58 @@
                 <div class="service">
                     <img src="img/service1.svg" alt="">
                     <h2 class="service-name">Free Delivery</h2>
-                    <p class="service-description">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+                    <p>Worldwide delivery on all. Authorit tively morph next-generation
+                        innov tion with extensive models.</p>
                 </div>
                 <div class="service">
                     <img src="img/service2.svg" alt="">
                     <h2 class="service-name">Sales & discounts</h2>
-                    <p class="service-description">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+                    <p>Worldwide delivery on all. Authorit tively morph next-generation
+                        innov tion with extensive models.</p>
                 </div>
                 <div class="service">
                     <img src="img/service3.svg" alt="">
                     <h2 class="service-name">Quality assurance</h2>
-                    <p class="service-description">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+                    <p>Worldwide delivery on all. Authorit tively morph next-generation
+                        innov tion with extensive models.</p>
                 </div>
             </div>
         </div>
-        <div class="subscribe">
-            <div class="citation-block">
-                <img src="img/face.png" alt="">
-                <div class="citation">
-                    <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
+        <div class="subscribe-background-img">
+            <div class="subscribe-background-color">
+                <div class="subscribe center">
+                    <div class="citation-block">
+                        <img src="img/face.png" alt="">
+                        <div class="citation">
+                            <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span>a pulvinar purus
+                                    condimentum</span>“</p>
+                        </div>
+                    </div>
+                    <div class="subscribe-block">
+                        <h2>SUBSCRIBE<br>
+                            <span>FOR OUR NEWLETTER AND PROMOTION</span>
+                        </h2>
+                        <form action="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="323" height="49" viewBox="0 0 323 49"
+                                fill="none">
+                                <path
+                                    d="M300.376 0H22.2143C9.94567 0 0 10.969 0 24.5C0 38.031 9.94567 49 22.2143 49H300.376C312.644 49 322.59 38.031 322.59 24.5C322.59 10.969 312.644 0 300.376 0Z"
+                                    fill="#E1E1E1" />
+                            </svg>
+                            <input required type="email" placeholder="Enter your email"><br>
+                            <button type="submit">
+                                <img src="img/button.svg" alt="">
+                                <p>Subscribe</p>
+                            </button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
     <footer>
         <div class="footer center">
-            <p class="footer-brand">© 2022  Brand  All Rights Reserved.</p>
+            <p class="footer-brand">© 2022 Brand All Rights Reserved.</p>
             <div class="media">
                 <div class="social-media">
                     <img src="img/facebook-f-brands (3) 1.svg" alt="">
